/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our samples at https://docs.gradle.org/7.3/samples
 */

plugins {
	id 'java'
	id 'eclipse'
}

compileJava {
	sourceCompatibility = '8'
	targetCompatibility = '8'
}

sourceSets {
	main {
		java {
			srcDirs 'src'
		}
	}
}